src/test/deca/syntax/invalid/created/syntax/uncamelcase.des
no viable alternative at input '2'
